# coe-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: 01_start_here.rs  02_send_date.rs
src/: errors.rs  lib.rs  packet_alloc.rs  packet_common.rs  packet_no_alloc.rs  tests.rs
